tests/paczka1/fuzzy1/75046489.err
Error in line 2: zGwu A990 90,1
Error in line 3: nvTjX A803 47,3
Error in line 12: zGwu A640 -1,1
Error in line 14: XXAgQW7 A990 9,0
Error in line 11: nvTjX A640 16,8
Error in line 26: TIkp6tlf Ao03 14,5
Error in line 20: XXAgQW7 S608 93,4
Error in line 33: 6D3TNXWOgJ2 A803 81,1
Error in line 34: 6D3TNXWOgJ2 S608 76,0
Error in line 31: TIkp6tlf A803 14,9
Error in line 32: nvTjX A990 14,1
